I fixed some mistakes after stedents review